fix(nav): 🐛 Add other warp group always to warp group selection menu